Mon Jan 29 18:40:23 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES: updated
	* tests/numbers/Makefile.am tests/numbers/format-number.*
	  tests/Makefile.am configure.in: added number formattting
	  test from Bjorn
	* libxslt/attributes.[ch]: separated attribute support, started
	  add support for attribute-sets
	* libxslt/functions.[ch]: update for number and formatting
	  from Bjorn
	* libxslt/transform.c libxslt/xslt.c libxslt/xsltInternals.h:
	  cleanups updates, etc ...

Mon Jan 29 00:53:25 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES: updated
	* libxslt/transform.c: added copy-of support
	* libxslt/xsltutils.[ch]: added xsltDocumentSortFunction()

Sun Jan 28 21:45:23 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES TODO: updates
	* libxslt/xsltutils.[ch] libxslt/xsltInternals.h libxslt/xsltutils.h:
	  added xsl:message

Sun Jan 28 17:25:35 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES TODO: updates
	* libxslt/namespaces.[ch] libxslt/templates.c libxslt/transform.c
	  libxslt/xslt.c libxslt/xsltInternals.h: added support for
	  namespace aliases and cleaned up the overall namespace related
	  code. This materialize as a new module.

Sun Jan 28 08:41:10 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in libxslt.spec.in: changes needed for libxml2-devel
	  changes

Sat Jan 27 11:00:20 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt.spec.in doc/xslt.html: updating doc and trying to add
	  it to the RPM.

Fri Jan 26 22:29:34 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* Makefile.am configure.in doc/Makefile.am: added a doc subdir
	  and the rules to generates the makefiles.
	* doc/libxslt.sgml doc/xslt.html: very first version of the manual
	* doc/html/*.html : autogenerated documentation
	* libxslt/xsltInternals.h: fixed a typedef wich was breaking gtk-doc

Fri Jan 26 21:48:25 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
