@@ -146,6 +146,7 @@ libxslt/xsltconfig.h
 tests/Makefile
 tests/REC1/Makefile
 tests/REC2/Makefile
+tests/REC/Makefile
 tests/numbers/Makefile
 doc/Makefile
 xslt-config
