@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS=REC1 REC2 numbers
+SUBDIRS=REC1 REC2 REC numbers
 
 test tests: all
