@@ -1,0 +1,3 @@
+<doc>
+This is an <emph>important</emph> point.
+</doc>
