@@ -1,0 +1,9 @@
+<xsl:stylesheet version="1.0"
+      xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
+      xmlns:fo="http://www.w3.org/1999/XSL/Format">
+<xsl:template match="emph">
+  <fo:inline-sequence font-weight="bold">
+    <xsl:apply-templates/>
+  </fo:inline-sequence>
+</xsl:template>
+</xsl:stylesheet>
