@@ -1,0 +1,14 @@
+<xsl:stylesheet version="1.0"
+      xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
+      xmlns:fo="http://www.w3.org/1999/XSL/Format">
+<xsl:template match="chapter">
+  <fo:block>
+    <xsl:apply-templates/>
+  </fo:block>
+</xsl:template>
+<xsl:template match="doc">
+<doc>
+    <xsl:apply-templates/>
+</doc>
+</xsl:template>
+</xsl:stylesheet>
