@@ -1,0 +1,7 @@
+<doc>
+<author-group>
+<author>name1</author>
+<author>name2</author>
+<info>skipped</info>
+</author-group>
+</doc>
