@@ -1,0 +1,7 @@
+<doc>
+<author-group>
+<author><given-name>name1</given-name></author>
+<author><given-name>name2</given-name></author>
+<author>skipped</author>
+</author-group>
+</doc>
