@@ -1,0 +1,16 @@
+<xsl:stylesheet version="1.0"
+      xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
+      xmlns:fo="http://www.w3.org/1999/XSL/Format">
+<xsl:template match="doc">
+<doc>
+    <xsl:apply-templates/>
+</doc>
+</xsl:template>
+
+<xsl:template match="author-group">
+  <fo:inline-sequence>
+    <xsl:apply-templates select="author/given-name"/>
+  </fo:inline-sequence>
+</xsl:template>
+
+</xsl:stylesheet>
