@@ -1,0 +1,4 @@
+<xsl:stylesheet version="1.0"
+      xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+<!-- empty stylesheet -->
+</xsl:stylesheet>
